fix: revise layout, and embed env files to optimize control of compose file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,123 @@
-version: '3'
-
+version: "3.3"
 services:
-  ark_server:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: ark_server_container
+  asa-server-1:
+    container_name: asa-server-1
+    hostname: asa-server-1
+    entrypoint: "/usr/bin/start_server"
+    user: gameserver
+    image: "mschnitzer/asa-linux-server:latest"
+    env_file: ./BBS-SVR-001/.env
+    environment:
+      - ASA_START_PARAMS=$STARTCMD
     ports:
-      - "27015:27015/udp"
-      - "7777:7777/udp"
-    stdin_open: true
-    tty: true
+      # Game port for player connections through the server browser
+      - 0.0.0.0:7777:7777/udp
+      # RCON port for remote server administration
+      - 0.0.0.0:27020:27020/tcp
+    depends_on:
+      - set-permissions-1
+    volumes:
+      - steam-1:/home/gameserver/Steam:rw
+      - steamcmd-1:/home/gameserver/steamcmd:rw
+      - server-files-1:/home/gameserver/server-files:rw
+      - cluster-shared:/home/gameserver/cluster-shared:rw
+      - ./BBS-SVR-001/:/home/gameserver/server-files/ShooterGame/Saved/Config/WindowsServer
+      - /etc/localtime:/etc/localtime:ro
+    networks:
+      asa-network:
+  set-permissions-1:
+    entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files ; chown -R 25000:25000 /cluster-shared'"
+    user: root
+    image: "opensuse/leap"
+    volumes:
+      - steam-1:/steam:rw
+      - steamcmd-1:/steamcmd:rw
+      - server-files-1:/server-files:rw
+      - cluster-shared:/cluster-shared:rw
+  asa-server-2:
+    container_name: asa-server-2
+    hostname: asa-server-2
+    entrypoint: "/usr/bin/start_server"
+    user: gameserver
+    image: "mschnitzer/asa-linux-server:latest"
+    env_file: ./BBS-SVR-002/.env
+    environment:
+      - ASA_START_PARAMS=$STARTCMD
+    ports:
+      # Game port for player connections through the server browser
+      - 0.0.0.0:7778:7778/udp
+      # RCON port for remote server administration
+      - 0.0.0.0:27021:27021/tcp
+    depends_on:
+      - set-permissions-2
+    volumes:
+      - steam-2:/home/gameserver/Steam:rw
+      - steamcmd-2:/home/gameserver/steamcmd:rw
+      - server-files-2:/home/gameserver/server-files:rw
+      - cluster-shared:/home/gameserver/cluster-shared:rw
+      - ./BBS-SVR-002/:/home/gameserver/server-files/ShooterGame/Saved/Config/WindowsServer
+      - /etc/localtime:/etc/localtime:ro
+    networks:
+      asa-network:
+  set-permissions-2:
+    entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files ; chown -R 25000:25000 /cluster-shared'"
+    user: root
+    image: "opensuse/leap"
+    volumes:
+      - steam-2:/steam:rw
+      - steamcmd-2:/steamcmd:rw
+      - server-files-2:/server-files:rw
+      - cluster-shared:/cluster-shared:rw
+  asa-server-3:
+    container_name: asa-server-3
+    hostname: asa-server-3
+    entrypoint: "/usr/bin/start_server"
+    user: gameserver
+    image: "mschnitzer/asa-linux-server:latest"
+    env_file: ./BBS-SVR-003/.env
+    environment:
+      - ASA_START_PARAMS=$STARTCMD
+    ports:
+      # Game port for player connections through the server browser
+      - 0.0.0.0:7779:7779/udp
+      # RCON port for remote server administration
+      - 0.0.0.0:27022:27022/tcp
+    depends_on:
+      - set-permissions-3
+    volumes:
+      - steam-3:/home/gameserver/Steam:rw
+      - steamcmd-3:/home/gameserver/steamcmd:rw
+      - server-files-3:/home/gameserver/server-files:rw
+      - cluster-shared:/home/gameserver/cluster-shared:rw
+      - ./BBS-SVR-003/:/home/gameserver/server-files/ShooterGame/Saved/Config/WindowsServer
+      - /etc/localtime:/etc/localtime:ro
+    networks:
+      asa-network:
+  set-permissions-3:
+    entrypoint: "/bin/bash -c 'chown -R 25000:25000 /steam ; chown -R 25000:25000 /steamcmd ; chown -R 25000:25000 /server-files ; chown -R 25000:25000 /cluster-shared'"
+    user: root
+    image: "opensuse/leap"
+    volumes:
+      - steam-3:/steam:rw
+      - steamcmd-3:/steamcmd:rw
+      - server-files-3:/server-files:rw
+      - cluster-shared:/cluster-shared:rw
+volumes:
+  cluster-shared:
+  steam-1:
+  steamcmd-1:
+  server-files-1:
+  steam-2:
+  steamcmd-2:
+  server-files-2:
+  steam-3:
+  steamcmd-3:
+  server-files-3:
+networks:
+  asa-network:
+    attachable: true
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.name: 'wsl-asanet'
+
+      
