--- a/BBS-SVR-001/.env
+++ b/BBS-SVR-001/.env
@@ -10,7 +10,6 @@ MAP_NAME=TheIsland_WP
 MAXPLAYERS=40
 MODS=
 
-START_CMD=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=40 -clusterid=bbs-cluster -ClusterDirOverride="/home/gameserver/cluster-shared"
+ASA_START_PARAMS=TheIsland_WP?listen?Port=7777?RCONPort=27020?RCONEnabled=True -WinLiveMaxPlayers=40 -clusterid=bbs-cluster -ClusterDirOverride="/home/gameserver/cluster-shared"
 
-ASA_START_PARAMS=$STARTCMD
 ENABLE_DEBUG=0
