--- a/BBS-SVR-003/.env
+++ b/BBS-SVR-003/.env
@@ -11,7 +11,6 @@ MAXPLAYERS=40
 MODS=942355
 
 
-STARTCMD=${MAP_NAME}?listen?Port=${LISTENPORT}?RCONPort=${RCONPORT}?RCONEnabled=${RCONENABLED} -WinLiveMaxPlayers=${MAXPLAYERS} -mods=${MODS} -clusterid=${CLUSTERID} -ClusterDirOverride=${CLUSTERDIR}
+ASA_START_PARAMS=${MAP_NAME}?listen?Port=${LISTENPORT}?RCONPort=${RCONPORT}?RCONEnabled=${RCONENABLED} -WinLiveMaxPlayers=${MAXPLAYERS} -mods=${MODS} -clusterid=${CLUSTERID} -ClusterDirOverride=${CLUSTERDIR}
 
-ASA_START_PARAMS=$STARTCMD
 ENABLE_DEBUG=0
